# POC-real-time-chat-Fast-API

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: config.py  main.py
app/auth/: jwt.py
app/crud/: user.py
app/database/: session.py
app/models/: __init__.py  message.py  thread.py  user.py
app/schemas/: auth.py  message.py  thread.py  user.py
migrations/: env.py
migrations/versions/: 2976a4d2385d_fix_circular_import.py  d0425898c664_add_all_models.py
