[project]
name = "poc-real-time-chat-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic[tz]>=1.16.5",
    "databases>=0.9.0",
    "fastapi[standard]>=0.118.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
]
